File component: fix file name alignment

--- a/src/client/components/inputv3/file/index.less
+++ b/src/client/components/inputv3/file/index.less
@@ -23,6 +23,12 @@
         height: 100%;
     }
 
+    .preview {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
     input[type="file"] {
         cursor: pointer;
         opacity: 0;
